test/grammar/import/pkg_inplace_modify_fail_0/stderr.golden
error[E1001]: ImmutableError
 --> ${CWD}/main.k:3:1
  |
3 | pkg.a = 1
  | ^ Can not change the value of 'pkg', because it was declared immutable
  |
 --> ${CWD}/main.k:1:1
  |
1 | import pkg
  | ^ The variable 'pkg' is declared here
  |
note: change the variable name to '_pkg' to make it mutable